--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@angular/youtube-player": "^10.2.7",
     "flex-layout": "^1.0.1",
     "flexlayout": "^1.0.6",
     "rxjs": "~6.6.0",
